<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">充值demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_title">新游通行证登录</string>
    <string name="dialog_register_title">新游通行证注册</string>
    <string name="dialog_auto_register_title">新游通行证</string>
    <string name="dialog_input_user_hint">手机号/用户名/邮箱</string>
    <string name="dialog_input_pass_hint">请输入登录密码</string>
    <string name="findpass_pass_hint">请输入新密码</string>
    <string name="dialog_btn_register">快速注册</string>
    <string name="dialog_btn_login">立即登录</string>
    <string name="dialog_bottom_info">使用手机号注册安全快捷</string>
    <string name="dialog_register4_bottom_info">手机号注册</string>
    <string name="dialog_tv_forget">找回密码</string>
    <string name="dialog_register1_btn">立即注册</string>
    <string name="dialog_register5_btn">手机一键注册</string>
    <string name="dialog_register2_btn">下一步</string>
    <string name="dialog_register2_bottom_info">使用账号注册</string>
    <string name="dialog_register2_input_phone">手机号:</string>
    <string name="dialog_register2_input_hit">请输入手机号</string>
    <string name="dialog_register3_input_hit">请输入验证码</string>
    <string name="dialog_register3_input_code">验证码:</string>
    <string name="dialog_register3_input_pass">密&#160;&#160;&#160;&#160;码:</string>
    <string name="dialog_register4_input_pass">密码:</string>
    <string name="dialog_register4_input_user">账号:</string>
    <string name="dialog_register4_input_hit">请输入4~50位字符</string>
    <string name="dialog_register4_pass_hit">至少8位字母和数字组合</string>
    <string name="dialog_register5_input_hit">使用手机号一键注册的提示</string>
    <string name="dialog_modify_input_pass">新密码:</string>
    <string name="dialog_modify_title">修改密码</string>
    <string name="dialog_find_pass2_title">重置密码</string>
    <string name="dialog_find_pass_title">找回密码</string>
    <string name="dialog_find_pass_input_hint">请输入您的账号</string>
    <string name="dialog_find_pass_btn">提交</string>
    <string name="dialog_find_pass2_btn">确定</string>
    <string name="dialog_find_pass3_btn">我知道了</string>
    <string name="dialog_find_pass3_tv1">您的账号没有绑定手机,无法从手机端找回。</string>
    <string name="dialog_find_pass3_tv2">请联系客服 : 020-38038175</string>
    <string name="activity_charge_title">新游充值中心</string>
    <string name="activity_card_charge_title">手机充值卡</string>
    <string name="activity_charge_item1_tv">金额:&#160;</string>
    <string name="activity_charge_item1_tv_hint">订单信息</string>
    <string name="activity_charge_item2_tv_hint">请选择支付方式</string>
    <string name="activity_card_charge_item_tv">请选择运营商</string>
    <string name="activity_card_charge_item2_tv">请选择金额</string>
    <string name="activity_charge_item2_tv1_title">支付宝</string>
    <string name="activity_charge_item2_tv1_mes">支持消费支付宝余额</string>
    <string name="activity_charge_item2_tv2_title">财付通</string>
    <string name="activity_charge_item2_tv2_mes">支持消费财付通余额</string>
    <string name="activity_charge_item2_tv3_title">手机充值卡</string>
    <string name="activity_charge_item2_tv3_mes">支持消费充值卡余额</string>
    <string name="activity_mobile_title">手机充值卡</string>
    <string name="back">返回</string>
    <string name="mobile_move">移动</string>
    <string name="mobile_union">联通</string>
    <string name="mobile_telecom">电信</string>
    <string name="mobile_item1_tv">选择面值</string>
    <string name="mobile_tv_mes1">1.全部为一次性充值,不支持分次；</string>
    <string name="mobile_tv_mes2">2.所选面值必须与充值卡实际面值保持一致,选择错误将导致资金损失。</string>
    <string name="mobile_number">卡号</string>
    <string name="mobile_pass">密码</string>
    <string name="mobile_input_hint">数字</string>
    <string name="mobile_btn">立即充值</string>
    <string name="loading">加载中...</string>
    <string name="find_pass_bottom_info">账号未绑定手机须通过客服找回\n\n联系客服: 020-38038175</string>
    <string name="dialog5_bottom">使用已有账号登录</string>
    <string name="alert_btn">确定</string>
    <string name="activity_card_charge_mes1">1.&#160;全部为一次性充值,&#160;不支持分次;</string>
    <string name="activity_card_charge_mes2">2.如果使用的充值卡</string>

</resources>