<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/font_dark_black"
        android:padding="10dp" >

        <ImageView
            style="@style/dialog_back"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_charge_title"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_font_title" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/title_seprater" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_charge_item1_tv"
            android:textColor="@color/font_dark_black"
            android:textSize="@dimen/activity_item_font_tv" />

        <com.newgame.sdk.view.KeyBoardEditText
            android:id="@id/tv_charge_id"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:focusable="false"
            android:inputType="number"
            android:singleLine="true"
            android:text="1"
            android:textColor="@color/font_origin"
            android:textSize="@dimen/activity_item_font_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="元"
            android:textColor="@color/font_dark_black"
            android:textSize="@dimen/activity_item_font_tv" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@id/iv_charge_edit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/icon_edit" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_charge_item2_tv_hint"
        android:textColor="@color/font_light_black"
        android:textSize="@dimen/activity_charge_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_item_bg"
        android:orientation="vertical"
        android:padding="1dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_item_top"
            android:clickable="true"
            android:onClick="item_click"
            android:padding="10dp"
            android:tag="1" >

            <ImageView
                android:id="@+id/sdk_iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_zfb" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/sdk_iv1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv1_title"
                    android:textColor="@color/font_dark_black"
                    android:textSize="@dimen/activity_item_font_tv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv1_mes"
                    android:textColor="@color/activity_charege_item_mes"
                    android:textSize="@dimen/activity_item_font_tv_info"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>
        <!-- item2 -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/title_seprater" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_item_middle"
            android:clickable="true"
            android:onClick="item_click"
            android:padding="10dp"
            android:tag="2" >

            <ImageView
                android:id="@+id/sdk_iv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_cft" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/sdk_iv2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv2_title"
                    android:textColor="@color/font_dark_black"
                    android:textSize="@dimen/activity_item_font_tv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv2_mes"
                    android:textColor="@color/activity_charege_item_mes"
                    android:textSize="@dimen/activity_item_font_tv_info"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/title_seprater" />
        <!-- item3 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_item_bottom"
            android:clickable="true"
            android:onClick="item_click"
            android:padding="10dp"
            android:tag="3" >

            <ImageView
                android:id="@+id/sdk_iv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_charge" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/sdk_iv3"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv3_title"
                    android:textColor="@color/font_dark_black"
                    android:textSize="@dimen/activity_item_font_tv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_charge_item2_tv3_mes"
                    android:textColor="@color/activity_charege_item_mes"
                    android:textSize="@dimen/activity_item_font_tv_info"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>